# MEDICHAIN

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  quer.md  setup.py
MediChain/: README.md  demo.py  docker-compose.yml
MediChain/.github/workflows/: ci.yml
MediChain/backend/: README.md  alembic.ini  init.sql  pyproject.toml
MediChain/backend/app/api/: webhooks.py
MediChain/backend/migrations/: env.py
MediChain/backend/migrations/versions/: 2024_01_01_0000-001_initial_medichain_schema.py
MediChain/backend/snet-service/: Dockerfile  compile_proto.py  grpc_service.py  medichain.proto  service_metadata.json  snetd.config.json
MediChain/backend/src/: config.py
MediChain/backend/src/agents/: consent_agent.py  patient_agent.py
MediChain/backend/src/api/: __init__.py
MediChain/backend/src/api/v1/: __init__.py  agents.py  patients.py  snet.py  webhooks.py
MediChain/backend/src/core/: logging.py
MediChain/backend/src/models/: __init__.py  trial.py  user.py
MediChain/backend/src/services/: blockchain.py  clinical_trials.py  llm.py  vector_db.py
MediChain/backend/tests/: __init__.py  test_api.py  test_snet.py  test_webhooks.py
MediChain/contracts/: Dockerfile.dev  hardhat.config.ts  tsconfig.json
MediChain/contracts/scripts/: deploy.ts  generate-artifacts.ts
MediChain/contracts/src/: MediChainConsent.sol
MediChain/frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
MediChain/frontend/src/__tests__/: app.test.tsx
MediChain/frontend/src/app/: globals.css  layout.tsx  page.tsx
MediChain/frontend/src/components/: ClientLayout.tsx  ConsentModal.tsx  EligibilityChecker.tsx  MatchCard.tsx  Navbar.tsx  TrialCard.tsx  index.ts
MediChain/frontend/src/hooks/: index.ts  useContract.ts  useContracts.ts  useMatches.ts  usePatient.ts  useTrials.ts
MediChain/frontend/src/lib/: api.ts  wagmi.ts
MediChain/frontend/src/types/: api.ts
MediChain/scripts/: setup.bat
MediChain/smart-contracts/: hardhat.config.js
MediChain/smart-contracts/contracts/: MediChainConsent.sol
MediChain/smart-contracts/scripts/: deploy.js
backend/: Dockerfile  pyproject.toml
backend/snet-service/: publish_to_marketplace.py  run_snet_service.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  matcher_agent.py
backend/src/api/v1/: health.py  matches.py  trials.py
backend/src/core/: __init__.py  database.py  security.py
backend/src/middleware/: __init__.py  auth.py
backend/src/models/: match.py  patient.py
backend/src/services/: __init__.py  snet_service.py
contracts/: package.json
docs/: .gitignore  SNET_DEPLOYMENT.md  architecture.md
frontend/: tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/__tests__/: setup.tsx
frontend/src/app/: globals.css  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: AIInsightsPanel.tsx  Footer.tsx  MatchCard.tsx  Navbar.tsx  Providers.tsx  StatsCard.tsx  TrialCard.tsx  WalletStatus.tsx
frontend/src/lib/: contracts.ts  utils.ts
scripts/: setup.sh
smart-contracts/: package.json
smart-contracts/scripts/: deploy.ts
(+17 files in other folders)
